bugfix for safari scrollbars

--- a/src/sass/_videos.scss
+++ b/src/sass/_videos.scss
@@ -21,7 +21,7 @@ section{
         .after{
             display:block;
             opacity: 0;
-            height: 100vh;
+            height: 100%;
             transition: opacity 1s ease;
             position: absolute;
             top: 0; 
